--- a/FXKeychain.xcodeproj/xcshareddata/xcschemes/FXKeychain-Mac.xcscheme
+++ b/FXKeychain.xcodeproj/xcshareddata/xcschemes/FXKeychain-Mac.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "72C6171A1AA3949C0085F425"
-               BuildableName = "FXKeychain.framework"
+               BuildableName = "FXKeychainMac.framework"
                BlueprintName = "FXKeychain-Mac"
                ReferencedContainer = "container:FXKeychain.xcodeproj">
             </BuildableReference>
@@ -37,10 +37,11 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      language = ""
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -57,26 +58,30 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "72C6171A1AA3949C0085F425"
-            BuildableName = "FXKeychain.framework"
+            BuildableName = "FXKeychainMac.framework"
             BlueprintName = "FXKeychain-Mac"
             ReferencedContainer = "container:FXKeychain.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "72C6171A1AA3949C0085F425"
-            BuildableName = "FXKeychain.framework"
+            BuildableName = "FXKeychainMac.framework"
             BlueprintName = "FXKeychain-Mac"
             ReferencedContainer = "container:FXKeychain.xcodeproj">
          </BuildableReference>
@@ -85,16 +90,16 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Release"
       debugDocumentVersioning = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "72C6171A1AA3949C0085F425"
-            BuildableName = "FXKeychain.framework"
+            BuildableName = "FXKeychainMac.framework"
             BlueprintName = "FXKeychain-Mac"
             ReferencedContainer = "container:FXKeychain.xcodeproj">
          </BuildableReference>
